<resources>
    <string name="app_name">Pokédex</string>
    <string name="abilities">Abilities: </string>
    <string name="height">Height: </string>
    <string name="weight">Weight: </string>
    <string name="stats">Stats (EV): </string>
    <string name="hp">HP: </string>
    <string name="attack">Attack: </string>
    <string name="defense">Def: </string>
    <string name="speed">Speed: </string>
    <string name="spattack">Sp. Atack: </string>
    <string name="spdeffense">Sp. Def: </string>
</resources>
